<resources>
    <string name="app_name">ShhcApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Java man</string>
    <string name="nav_header_subtitle">java.man@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_patient">Patients</string>
    <string name="menu_ambulance">Ambulance Call</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="patients">Patients</string>
    <string name="menu_doctor">Consult Doctor</string>
</resources>